# LearnOpenGL

./: .gitignore  CMakeLists.txt  LearnOpenGL.cpp  readme.txt
01_Start/: CMakeLists.txt  start.cpp  start.h
01_Start/01_helloWindow/: CMakeLists.txt  helloWindows.cpp  helloWindows.h
01_Start/02_helloTriangle/: CMakeLists.txt  helloTriangle.cpp  helloTriangle.h
01_Start/03_shader/: CMakeLists.txt  myShader.cpp  myShader.h  vertexShader.vs
01_Start/04_texture/: CMakeLists.txt  texture.cpp  texture.h
01_Start/05_transformations/: CMakeLists.txt  transformations.cpp  transformations.h
01_Start/06_CoordinateSystem/: CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h
01_Start/07_camera/: CMakeLists.txt  camera.cpp  camera.h
02_Lighting/: CMakeLists.txt  lighting.cpp  lighting.h
02_Lighting/01_Colors/: CMakeLists.txt  colors.cpp  colors.h
02_Lighting/02_BasicLighting/: 02_BasicLighting.cpp  02_BasicLighting.h  02_BasicLighting_copy.cpp  CMakeLists.txt
Dependencies/: Camera_s.h  Shader_s.h
Dependencies/glad/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
LoadImg/: CMakeLists.txt
ShaderClass/: CMakeLists.txt  shader.cpp  shader.h
VaoClass/: CMakeLists.txt  CSetVao.cpp  CSetVao.h
res/: 01_04texture.fs  01_04texture.vs  01_05transformations.vs  01_06coordinateSys.fs  01_07camera.vs  02_01Colors.fs  02_01Colors.vs  02_02BasicLighting.fs  02_02BasicLighting.vs  02_02BasicLightingLight.fs
